--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link href="css/main.css" rel="stylesheet" />
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
   </head>
-  <body>
+  <body ng-app="Top10App">
     <div class="header">
       <div class="container">
         10
       </div>
     </div>
 
-    <div class="main">
+    <div class="main" ng-controller="MainController">
       <div class="container">
         <div class="content">
 
@@ -37,6 +37,6 @@
     
 
     <!-- Services -->
-    
+    <script type="text/javascript" src="js/services/shows.js"></script>
   </body>
 </html>
