creates tvShow directive

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script src="js/controllers/MainController.js"></script>
 
     <!-- Directives -->
-    
+    <script type="text/javascript" src="js/directives/tvShow.js"></script>
 
     <!-- Services -->
     <script type="text/javascript" src="js/services/shows.js"></script>
