displays each tv show in the view

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
           <div ng-repeat="show in shows">
             <div class="rank">{{$index + 1}}</div>
-            
-
+            <tv-show info="show"></tv-show>
           </div>
 
         </div>
